<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/performerDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                />
            <LinearLayout
                android:id="@+id/mainContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView
                    android:id="@+id/txtPerformerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:text=""
                    android:textAlignment="center"/>
                <ImageView
                    android:id="@+id/cover"
                    android:layout_width="297dp"
                    android:layout_height="225dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/performer_cover"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/artist_cover" />
                <TextView
                    android:id="@+id/txtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:textSize="18sp"
                    android:textDirection="firstStrong"
                    android:text="@string/label_performer_name"
                    android:justificationMode="inter_word"
                    android:textAlignment="center"/>
            </LinearLayout>
        </FrameLayout>
    </ScrollView>
</LinearLayout>