...
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_album"
            android:icon="@drawable/album"
            android:title="@string/menu_album" />
        <item
            android:id="@+id/nav_performer"
            android:icon="@drawable/microphone_icon"
            android:title="@string/menu_artist" />
        <item
            android:id="@+id/nav_collector"
            android:icon="@drawable/music_icon"
            android:title="@string/menu_collector" />
...
