<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/performers"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.performers.PerformerFragment"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/dark_green"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/performersRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        tools:listitem="@layout/performer_item"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/roll_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/plus_icon_white"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/crearArtista"
        android:backgroundTint="@color/dark_green"/>

</FrameLayout>